# qsqlgen

./: LICENSE  README.md
src/: CMakeLists.txt  cond.cpp  cond.h  delete.cpp  delete.h  e.cpp  e.h  insert.cpp  insert.h  qsqlgen.cpp  qsqlgen.h  qsqlgen_global.h  query.cpp  query.h  sqlitedb.cpp  sqlitedb.h  update.cpp  update.h  utils.cpp  utils.h
